--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/passport": "^7.5",
+        "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
