--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,8 @@
 
     RewriteEngine On
 
+    RewriteBase /larasar/public
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
