--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,32 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# PASSWORD GRANT CLIENT
-PASSPORT_CLIENT_ID=
-PASSPORT_CLIENT_SECRET=
+PASSPORT_ACCESS_CLIENT_ID=
+PASSPORT_ACCESS_CLIENT_SECRET=
+
+PASSPORT_GRANT_CLIENT_ID=
+PASSPORT_GRANT_CLIENT_SECRET=
+
+# https://github.com/settings/applications/1170789
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+# https://developers.facebook.com/apps/511655595898404/dashboard
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+# https://console.developers.google.com/apis/credentials?authuser=0&project=modemb
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+TWILIO_ID=
+TWILIO_NUMBER=
+
+#  Link: https://accounts.blockcypher.com/tokens
+BITGO_ENV=test
+BITGO_TOKEN=
+BITGO_HOST=http://localhost
+BITGO_PORT=3080
+
+YOUR_API_KEY_HERE=
+YOUR_WALLET_ID_HERE=
