--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "A Laravel-Qusar starter project template.",
+    "description": "The Laravel Framework.",
     "keywords": [
         "framework",
         "laravel"
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/passport": "^7.5",
         "laravel/socialite": "^4.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "neto737/bitgosdk-php": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
