Auth Error Message

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_URL=http://localhost
 API_URL=
 
+# true = Cookies / false = LocalStorage
+COOKIE=
+LOCAL_SERVER=true
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
@@ -78,3 +82,11 @@ BITGO_PORT=3080
 
 YOUR_API_KEY_HERE=
 YOUR_WALLET_ID_HERE=5df03ba2dd9d539807ec0665a089d991
+
+
+# ============================= Issues =========================================
+# ----------------------------- Publishing to Store-----------------------------
+# https://stackoverflow.com/questions/5488339/how-can-i-find-and-run-the-keytool
+# ----------------------------- Validation -------------------------------------
+
+
