--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 API_URL=
-
-# true = Cookies / false = LocalStorage
-COOKIE=
+DEV_URL=
 
 LOG_CHANNEL=stack
 
@@ -86,6 +84,8 @@ YOUR_WALLET_ID_HERE=5df03ba2dd9d539807ec0665a089d991
 # ============================= Issues =========================================
 # ----------------------------- Publishing to Store-----------------------------
 # https://stackoverflow.com/questions/5488339/how-can-i-find-and-run-the-keytool
+# ----------------------------- Route Authentivation ---------------------------
+# ----------------------------- Data Table ---------------------------
 # ----------------------------- Validation -------------------------------------
 
 
