--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+MUST_VERIFY_EMAIL=false
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
