--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_COOKIE=true
 APP_URL=http://localhost
 API_URL=
 DEV_URL=
@@ -33,6 +34,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+MUST_VERIFY_EMAIL=0
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
