--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,11 +10,15 @@
     # RewriteCond %{HTTPS} !=on
     # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-    # RewriteCond %{HTTP_HOST} ^www\.
-    # RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    # Current Server
+    RewriteCond %{REQUEST_URI}::$1 ^(.*?/)(.*)::\2$
+    RewriteRule ^(.*)$ - [E=BASE:%1]
+    #redirect in-existent files/calls to index.php
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule . %{ENV:BASE}/index.php [L]
 
     #Local Server
-    RewriteBase /www/larasar/public
+    # RewriteBase /www/larasar/public
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
