--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,6 +7,8 @@
 
     #Production Server
     # RewriteBase /
+
+    # HTTPS
     # RewriteCond %{HTTPS} !=on
     # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
