--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME=Larasar
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://larasar.modemb.com/
-API_URL=http://larasar.modemb.com/
+APP_URL=http://larasar.modemb.com
+API_URL=http://larasar.modemb.com
 DEV_URL=http://localhost/larasar/public
 DEV_1_IP=
 
@@ -20,7 +20,6 @@ DB_PASSWORD=
 
 DB_HOST_DEV=127.0.0.1
 DB_DATABASE_DEV=suguffie
-# DB_DATABASE_DEV=test
 DB_USERNAME_DEV=root
 
 # log - pusher
@@ -98,7 +97,7 @@ PASSPORT_GRANT_CLIENT_SECRET=
 MAP_API_KEY=
 
 # https://openweathermap.org
-WEATHER_API_KEY=505e33994e7103ecac06fb042ddd23e1
+WEATHER_API_KEY=
 
 # ==================================Social Login============================================
 
