--- a/.env.example
+++ b/.env.example
@@ -5,19 +5,21 @@ APP_DEBUG=true
 APP_URL=http://larasar.modemb.com
 API_URL=http://larasar.modemb.com
 DEV_URL=http://localhost/larasar/public
+SANCTUM_STATEFUL_DOMAINS='localhost,192.168.2.11'
 DEV_1_IP=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Production DB
 DB_CONNECTION=mysql
 DB_HOST=
 DB_PORT=3306
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
-
+# Local DB
 DB_HOST_DEV=127.0.0.1
 DB_DATABASE_DEV=suguffie
 DB_USERNAME_DEV=root
@@ -27,7 +29,7 @@ BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 # Inertia:file/Livewire:database
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=525600
 # SESSION_DOMAIN=suguffie.com
 
@@ -133,6 +135,15 @@ PAYPAL_SANDBOX_SECRET=
 PAYPAL_SANDBOX_ACCESS=
 PAYPAL_WEBHOOK_SANDBOX_ID=
 
+STRIPE_KEY=your-stripe-key
+STRIPE_SECRET=your-stripe-secret
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
+
+# https://dashboard.stripe.com/test/dashboard
+CASHIER_CURRENCY=eur
+CASHIER_CURRENCY_LOCALE=nl_BE
+CASHIER_LOGGER=stack
+
 # Link: https://accounts.blockcypher.com/tokens
 # https://www.blockcypher.com/dev/bitcoin/#rate-limits-and-tokens
 # https://github.com/blockcypher/php-client.git
@@ -149,10 +160,14 @@ BITGO_PORT=3080
 YOUR_API_KEY_HERE=
 YOUR_WALLET_ID_HERE=
 
+# https://github.com/Foris-master/orange-money-sdk
+
+# https://github.com/markroland/converge-api-php
+
 # =====================================Payment API End=========================================
 
 # laravel new lx
-# quasar create quapp
+# quasar create
 # quasar serve
 # GitLens disabled
 # https://quasar.dev/quasar-cli/commands-list#introduction
