--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "uy": "npm update && yarn && quasar build -m pwa && quasar dev",
-    "uca": "npm update && quasar dev -m capacitor -T android",
-    "u": "npm update && quasar build -m pwa && quasar dev",
-    "y": "yarn && quasar build -m pwa && quasar dev",
-    "uco": "npm update && quasar dev -m android",
+    "bca": "quasar build -m capacitor -T android",
+    "php": "php -S 192.168.2.11:8000 -t public",
     "ca": "quasar dev -m capacitor -T android",
-    "b": "quasar build -m pwa && quasar dev",
-    "d": "npm update && quasar dev",
+    "ubd": "yarn u && yarn b && yarn d",
+    "be": "quasar build -m electron",
+    "bco": "quasar build -m android",
+    "e": "quasar dev -m electron",
     "co": "quasar dev -m android",
-    "p": "quasar dev -m pwa"
+    "u": "npm update && yarn",
+    "b": "quasar build -m pwa",
+    "p": "quasar dev -m pwa",
+    "s": "quasar dev -m ssr",
+    "uca": "u && npm run ca",
+    "uco": "u && npm run co",
+    "d": "quasar dev"
   },
   "dependencies": {
     "@quasar/extras": "^1.9.18",
@@ -35,9 +40,9 @@
     "core-js": "^3.6.5",
     "laravel-echo": "^1.11.0",
     "pusher-js": "^7.0.3",
-    "quasar": "^2.0.0",
+    "quasar": "^2.6.6",
     "timeago.js": "^4.0.2",
-    "vue": "^3.0.5",
+    "vue": "^3.2.33",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.1"
@@ -57,6 +62,8 @@
     "alpinejs": "^2.8.1",
     "autoprefixer": "^10.0.2",
     "dotenv": "^10.0.0",
+    "electron": "^19.0.0",
+    "electron-packager": "^15.2.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-loader": "^4.0.2",
