--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
+    "fca": "quasar dev -H 192.168.2.11 -m capacitor -T android",
+    "fco": "quasar dev -H 192.168.2.11 -m android",
     "bca": "quasar build -m capacitor -T android",
     "php": "php -S 192.168.2.11:8000 -t public",
     "ca": "quasar dev -m capacitor -T android",
@@ -21,17 +23,20 @@
     "bco": "quasar build -m android",
     "e": "quasar dev -m electron",
     "co": "quasar dev -m android",
+    "uca": "yarn u && npm run ca",
+    "uco": "yarn u && npm run co",
     "b": "quasar build -m pwa",
     "u": "npm update && yarn",
+    "bd": "yarn b && yarn d",
     "p": "quasar dev -m pwa",
     "s": "quasar dev -m ssr",
-    "uca": "u && npm run ca",
-    "uco": "u && npm run co",
     "d": "quasar dev"
   },
   "dependencies": {
     "@quasar/extras": "^1.9.18",
+    "@stripe/stripe-js": "^1.35.0",
     "axios": "^0.25",
+    "collect.js": "^4.34.3",
     "core-js": "^3.6.5",
     "laravel-echo": "^1.11.0",
     "pusher-js": "^7.0.3",
